Fixed combobox subtext in standard theme not being visible

--- a/src/sample/app/css/standard.css
+++ b/src/sample/app/css/standard.css
@@ -50,6 +50,11 @@
     -fx-border-color : black;
 }
 
+.combo-box .list-cell
+{
+    -fx-text-fill: black;
+}
+
 /* Page Sections */
 .searchContainer {
     -fx-background-color: #F5F5F5;
